# llm101

asset-processing-service/: .gitignore  Dockerfile  pyproject.toml
asset-processing-service/asset_processing_service/: api_client.py  config.py  job_processor.py  logger.py  main.py  media_processor.py  models.py
webapp/: drizzle.config.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/(dashboard)/: layout.tsx
webapp/app/(landing)/: page.tsx
webapp/components/: ConfirmationModal.tsx  GenerateStepBody.tsx  GenerateStepHeader.tsx  ProjectDetailView.tsx  ProjectList.tsx  PromptEditorDialog.tsx  Sidebar.tsx  SidebarNav.tsx  SidebarToggle.tsx  SubscriptionManager.tsx  SubscriptionMessage.tsx  TemplateDetailHeader.tsx  TemplateDetailView.tsx  TemplateList.tsx  TemplateSelectionPopup.tsx  UserProfileSection.tsx
webapp/components/landing/: CTA.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx
webapp/components/project-detail/: ConfigurePromptsStep.tsx  ConfigurePromptsStepHeader.tsx  GenerateContentStep.tsx  ManageUploadStep.tsx  ProjectDetailBody.tsx  ProjectDetailHeader.tsx  ProjectDetailStepper.tsx  ProjectDetailView.tsx  PromptContainerCard.tsx  PromptEditorDialog.tsx  PromptList.tsx
webapp/components/upload-step/: ManageUploadStep.tsx  TemplateDetailBody.tsx  (+2 more)
webapp/interfaces/: CommonPrompts.ts
webapp/lib/: constants.ts  stripe.ts
webapp/server/: mutations.ts  queries.ts
webapp/utils/: formatFileTokens.ts  sidebarUtils.ts  timeUtils.ts  token-helper.ts
(+29 files in other folders)
