[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Theo Reyes <vincintz@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.10.10"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
